Fix some spacing in the header

--- a/source/stylesheets/global/_base.scss
+++ b/source/stylesheets/global/_base.scss
@@ -68,8 +68,6 @@ ul {
 
 
 header.master {
-  padding-top:10px;
-
   h1 {
     margin: 0;
     float: left;
@@ -79,6 +77,7 @@ header.master {
     @include clearfix;
 
     border-bottom:1px solid rgba(255,255,255,.1);
+    padding: 1em;
 
     @media only screen and (min-width: 600px) {
       ul {
